tests/script_errors/string_interpolation_empty/error.txt
Error: 
    1 | "#{}"
      |  ^^^ You have an interpolation without content.
      |      NOTE: Did you mean to write a literal '#{'? Escape it as '\#{'.